# fuel

./: .anatomy.toml  .gitignore  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  Cargo.toml  GUIDE.md  PATTERNS.md  README.md  ROADMAP.md  build_errors.txt  build_errors2.txt  build_errors3.txt  build_final.txt  fuel.code-workspace  rename.ps1
_fuel_nn_retired/: Cargo.toml
_fuel_nn_retired/examples/: basic_optimizer.rs
_fuel_nn_retired/src/: batch_norm.rs  conv.rs  embedding.rs  layer_norm.rs  lib.rs  linear.rs  loss.rs  moe.rs  ops.rs  quantizable_linear.rs  rotary_emb.rs  sequential.rs  var_builder.rs
_fuel_nn_retired/tests/: group_norm.rs  rnn.rs
candle-core/: Cargo.toml
candle-core/examples/: basics.rs  cuda_sum_benchmark.rs
candle-core/src/: backprop.rs  conv.rs  convert.rs  device.rs  display.rs  dyn_backend.rs  error.rs  indexer.rs  kv_cache.rs  lib.rs  npy.rs  op.rs  safetensors.rs  sampling.rs  scalar.rs  shape.rs  sort.rs  storage.rs  streaming.rs  tensor.rs  tensor_cat.rs  test_utils.rs  variable.rs
candle-core/tests/: custom_op_tests.rs  display_tests.rs  grad_tests.rs  indexing_tests.rs  layout_tests.rs  matmul_tests.rs  quantized_tests.rs  serialization_tests.rs  tensor_tests.rs
candle-cuda/: Cargo.toml
candle-cuda/src/: cudnn.rs  device.rs  dyn_impl.rs  error.rs  lib.rs  storage.rs  utils.rs
candle-metal/: Cargo.toml
candle-metal/src/: device.rs  dyn_impl.rs  lib.rs  storage.rs
fuel-aocl-cpu-backend/: Cargo.toml
fuel-aocl-cpu-backend/src/: binding_table.rs  dll_path.rs  lib.rs  probe.rs
fuel-backend-contract/: Cargo.toml
fuel-backend-contract/src/: backend.rs  dyn_backend.rs  inplace_op.rs  lib.rs  quantized.rs  storage.rs
fuel-conv/: Cargo.toml
fuel-conv/src/: lib.rs
fuel-core/: Cargo.toml  README.md
fuel-core-types/: Cargo.toml
fuel-core-types/include/: fuel_dlpack_ext.h
fuel-core-types/src/: backend.rs  capability.rs  conv.rs  cpu_storage.rs  device.rs  dispatch.rs  dtype.rs  dummy_dtype.rs  dyn_backend.rs  error.rs  inplace_op.rs  layout.rs  lib.rs  op.rs  probe.rs  quant_scale.rs  quantized.rs  scalar.rs  seam.rs  shape.rs  storage.rs  strided_index.rs  stype.rs  symbol.rs
fuel-core/examples/: basics.rs  cuda_basics.rs  cuda_sum_benchmark.rs  metal_basics.rs
fuel-core/src/: backend.rs  backprop.rs  conv.rs  convert.rs  custom_op.rs  device.rs  dispatch.rs  display.rs  dtype.rs  dummy_cuda_backend.rs  dummy_dtype.rs  dummy_metal_backend.rs  dyn_backend.rs  error.rs  factories.rs  graph_storage.rs  hopfield.rs  indexer.rs  inference_context.rs  judge.rs  kv_cache.rs  layout.rs  lazy.rs  lazy_based.rs  lazy_beit.rs  lazy_bert.rs  lazy_bigcode.rs  lazy_blip.rs  lazy_blip_text.rs  lazy_blip_vision.rs  lazy_chatglm.rs  lazy_chinese_clip.rs  lazy_clip.rs  lazy_colpali.rs  lazy_conv3d.rs  lazy_convmixer.rs  lazy_convnext.rs  lazy_csm.rs  lazy_dac.rs  lazy_debertav2.rs  (+171 more)
fuel-core/tests/: bilinear_tests.rs  conv_tests.rs  cuda_async_realize_live.rs  cuda_composed_bisect.rs  cuda_multidevice_realize_live.rs  cuda_vulkan_multidevice_realize_live.rs  cuda_vulkan_overlap_bench_live.rs  custom_op_tests.rs  display_tests.rs  fixture_capture_roundtrip.rs  flash_attn_cuda.rs  flash_attn_oracle.rs  flash_attn_vulkan.rs  fuse_linear_oracle.rs  g2_from_storage.rs  grad_tests.rs  indexing_tests.rs  layout_tests.rs  lazy_conv_transpose1d_oracle.rs  lazy_interpolate2d_oracle.rs  matmul_tests.rs  nonzero_indices.rs  paged_attn_oracle.rs  phase6a_anchor_oracle.rs  phase6a_structured_panics.rs  phase6b_cuda_anchor.rs  phase7b_aocl_anchor.rs  phase7b_conv2d_oracle.rs  phase7b_mkl_anchor.rs  phase7b_routed_realize.rs  phase_c_rotating_kv.rs  phase_c_rotating_kv_cuda.rs  pool_tests.rs  pth_tests.rs  quantized_tests.rs  recip_abs_realize_live.rs  serialization_tests.rs  streaming_mask_tests.rs  tensor_tests.rs  vulkan_bridge_realize_live.rs  (+2 more)
fuel-correctness-fixtures/: Cargo.toml
fuel-correctness-fixtures/src/: capture.rs  lib.rs
fuel-cpu-backend/: Cargo.toml
fuel-cpu-backend/src/: byte_kernels.rs  byte_storage.rs  conv2d.rs  dyn_impl.rs  lib.rs  ops.rs  probe.rs  quantized.rs  system_memory.rs  utils.rs
fuel-cpu-kernels/: Cargo.toml
fuel-cpu-kernels/src/: avx.rs  lib.rs
fuel-cublaslt/: Cargo.toml
fuel-cublaslt/src/: lib.rs
fuel-cuda/: Cargo.toml
fuel-cuda-backend/: Cargo.toml
fuel-cuda-backend/src/: backend.rs  byte_kernels.rs  byte_storage.rs  capture.rs  cutlass.rs  device.rs  dyn_impl.rs  error.rs  flash_attn.rs  flash_attn_v3.rs  lib.rs  pinned.rs  probe.rs  quantized.rs  storage.rs  ug.rs  utils.rs
fuel-cuda-backend/tests/: backend_runtime_live.rs  baracuda_gguf_compile.rs  byte_storage_live.rs  pinned_live.rs  recip_abs_realize_live.rs
fuel-cuda-vmm/: Cargo.toml
fuel-cuda-vmm/src/: cuda_ffi.rs  error.rs  lib.rs  mapping.rs  physical_memory.rs  virtual_memory.rs
fuel-cuda/src/: device.rs  dyn_impl.rs  error.rs  lib.rs  storage.rs  utils.rs
fuel-datasets/: Cargo.toml  README.md
fuel-datasets/src/: batcher.rs  hub.rs  lib.rs
fuel-dispatch/: Cargo.toml
fuel-dispatch/src/: baracuda_dispatch.rs  cast_fusion.rs  compiled.rs  cost.rs  decode_flash.rs  dispatch.rs  driver.rs  fused.rs  fused_cost.rs  jit_adopt.rs  jit_cuda_load.rs  jit_ingest.rs  jit_ingest_probe.rs  kernel.rs  kiss_corpus.rs  lib.rs  optimize.rs  pipelined.rs  plan.rs  plan_store.rs  residency.rs  runtime_fused_arm.rs  runtime_fused_kernels.rs  runtime_fused_pathfinder.rs  topology.rs  variant_bake.rs  vulkan_dispatch.rs
fuel-dispatch/tests/: baracuda_affine_live.rs  baracuda_arg_reduce_live.rs  baracuda_attention_live.rs  baracuda_binary_live.rs  baracuda_cast_live.rs  (+25 more)
fuel-examples/: Cargo.toml  README.md  build.rs  buildtime_downloader.rs
fuel-flash-attn/: Cargo.toml
fuel-flash-attn-cuda/: Cargo.toml  README.md
fuel-flash-attn-cuda-sys/: Cargo.toml  build.rs
fuel-flash-attn-v3/: Cargo.toml  build.rs
fuel-flash-attn-v3-cuda/: Cargo.toml  README.md
fuel-flash-attn-v3-cuda-sys/: Cargo.toml
fuel-formats/: Cargo.toml  README.md
fuel-graph-cpu/: Cargo.toml
fuel-graph-cuda/: Cargo.toml
fuel-graph-executor/: Cargo.toml
(+1844 files in other folders)
