[workspace]
# Every Fuel crate lives in the workspace so each one can inherit
# shared dep versions via `{ workspace = true }`. Crates that need
# heavy build toolchains (CUDA, Metal, Python, prost/ONNX) are kept
# off `default-members` so a plain `cargo build` / `cargo test`
# still works on machines that don't have those toolchains.
members = [
    "fuel-aocl-cpu-backend",
    "fuel-book",
    "fuel-conv",
    "fuel-core",
    "fuel-core-types",
    "fuel-cpu-backend",
    "fuel-mkl-cpu-backend",
    "fuel-cublaslt",
    "fuel-cuda-vmm",
    "fuel-datasets",
    "fuel-examples",
    "fuel-flash-attn-cuda",
    "fuel-flash-attn-cuda-sys",
    "fuel-formats",
    "fuel-graph",
    "fuel-graph-cpu",
    "fuel-cuda-backend",
    "fuel-dispatch",
    "fuel-graph-executor",
    "fuel-graph-router",
    "fuel-vulkan-backend",
    "fuel-inference",
    "fuel-kernels-source",
    "fuel-vulkan-kernels",
    "fuel-lazy-examples",
    "fuel-metal-backend",
    "fuel-metal-kernels",
    "fuel-nn",
    "fuel-onnx",
    "fuel-parallel",
    "fuel-pyo3",
    "fuel-quantized",
    "fuel-reference-backend",
    "fuel-storage",
    "fuel-training",
    "fuel-transformers",
    "fuel-ug",
    "fuel-wasm-examples/*",
    "fuel-wasm-tests",
    "tensor-tools",
]
# What `cargo build`, `cargo check`, `cargo test` without `-p` or
# `--workspace` will actually build. Matches the pre-restructure
# `members` list — CUDA/Metal/ONNX/book crates require toolchains
# or platforms not every contributor has, so they're opt-in via
# `-p` or `--workspace`.
default-members = [
    "fuel-core",
    "fuel-core-types",
    "fuel-cpu-backend",
    "fuel-dispatch",
    "fuel-formats",
    "fuel-graph",
    "fuel-graph-cpu",
    "fuel-cuda-backend",
    "fuel-graph-executor",
    "fuel-graph-router",
    "fuel-vulkan-backend",
    "fuel-kernels-source",
    "fuel-vulkan-kernels",
    "fuel-lazy-examples",
    "fuel-reference-backend",
    "fuel-storage",
    "fuel-metal-backend",
    "fuel-datasets",
    "fuel-examples",
    "fuel-inference",
    "fuel-nn",
    "fuel-parallel",
    "fuel-pyo3",
    "fuel-quantized",
    "fuel-transformers",
    "fuel-training",
    "fuel-ug",
    "fuel-wasm-examples/*",
    "fuel-wasm-tests",
    "tensor-tools",
]
resolver = "2"

[workspace.package]
version = "0.10.2"
edition = "2024"
description = "Minimalist ML framework."
repository = "https://github.com/huggingface/fuel"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ab_glyph = "0.2.23"
accelerate-src = { version = "0.3.2" }
# AOCL: AMD CPU BLAS path. Path deps (out-of-tree workspace at
# C:\Users\cires\OneDrive\Documents\projects\aocl) for the Phase 7b
# spike; switch to crates.io versions once the per-CPU-backend
# selection layer ships.
aocl-blas  = { path = "../aocl/crates/aocl-blas" }
aocl-types = { path = "../aocl/crates/aocl-types" }
# Intel oneMKL safe wrapper for the Phase 7b second CPU backend.
# Crates.io release 0.2.0 (2026-05-15) — adds service module
# (IsaLevel, cpu_* helpers, ThreadCountGuard, AlignedBuffer), RNG
# distribution suite, iterative-refinement LAPACK, sparse SYRK/SYPR,
# summary-stats preprocessing.
onemkl = "0.2"
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
fuel = { path = "./fuel-core", package = "fuel-core", version = "0.10.2" }
fuel-aocl-cpu-backend = { path = "./fuel-aocl-cpu-backend", version = "0.10.2" }
fuel-conv = { path = "./fuel-conv", version = "0.10.2" }
fuel-core-types = { path = "./fuel-core-types", version = "0.10.2" }
fuel-cpu-backend = { path = "./fuel-cpu-backend", version = "0.10.2" }
fuel-mkl-cpu-backend = { path = "./fuel-mkl-cpu-backend", version = "0.10.2" }
fuel-graph = { path = "./fuel-graph", version = "0.10.2" }
fuel-graph-cpu = { path = "./fuel-graph-cpu", version = "0.10.2" }
fuel-cuda-backend = { path = "./fuel-cuda-backend", version = "0.10.2" }
fuel-dispatch = { path = "./fuel-dispatch", version = "0.10.2" }
fuel-graph-executor = { path = "./fuel-graph-executor", version = "0.10.2" }
fuel-graph-router = { path = "./fuel-graph-router", version = "0.10.2" }
fuel-vulkan-backend = { path = "./fuel-vulkan-backend", version = "0.10.2" }
fuel-kernels-source = { path = "./fuel-kernels-source", version = "0.10.2" }
fuel-vulkan-kernels = { path = "./fuel-vulkan-kernels", version = "0.10.2" }
fuel-datasets = { path = "./fuel-datasets", version = "0.10.2" }
fuel-flash-attn-cuda = { path = "./fuel-flash-attn-cuda", version = "0.10.2" }
fuel-flash-attn-cuda-sys = { path = "./fuel-flash-attn-cuda-sys", version = "0.10.2" }
fuel-formats = { path = "./fuel-formats", version = "0.10.2" }
fuel-inference = { path = "./fuel-inference", version = "0.10.2" }
fuel-metal-backend = { path = "./fuel-metal-backend", version = "0.10.2" }
fuel-metal-kernels = { path = "./fuel-metal-kernels", version = "0.10.2" }
fuel-nn = { path = "./fuel-nn", version = "0.10.2" }
fuel-onnx = { path = "./fuel-onnx", version = "0.10.2" }
fuel-parallel = { path = "./fuel-parallel", version = "0.10.2" }
fuel-quantized = { path = "./fuel-quantized", version = "0.10.2" }
fuel-reference-backend = { path = "./fuel-reference-backend", version = "0.10.2" }
fuel-storage = { path = "./fuel-storage", version = "0.10.2" }
fuel-training = { path = "./fuel-training", version = "0.10.2" }
fuel-transformers = { path = "./fuel-transformers", version = "0.10.2" }
fuel-ug = { path = "./fuel-ug", version = "0.10.2" }
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.8", default-features = false }
# --- CUDA FFI layer: baracuda -----------------------------------------------
# Fuel depends on baracuda's sub-crates directly (not the `baracuda` umbrella)
# so feature flags stay explicit and transitive weight is minimal per consuming
# crate. All 46 baracuda crates are published on crates.io.
#
# alpha.4 added the `half-crate` feature on baracuda-cudnn (CudnnDataType
# impls for half::f16 / half::bf16), unblocking the f16/bf16 conv2d/conv1d
# paths in fuel-cuda-backend.
#
# alpha.5 fixes multi-CUDA cuDNN search-dir selection on Windows: with both
# CUDA 12.x and 13.x cuDNN bundles installed under
# `C:\Program Files\NVIDIA\CUDNN\v9.x\bin\<cuda_major>\`, the loader now
# picks the bundle whose major matches the running CUDA driver instead of
# whatever the filesystem happened to enumerate first. That bug bit Fuel's
# yolov8 anchor (it loaded the 12.9 cudnn_adv64_9.dll which delay-references
# cublasLt64_12.dll, which doesn't exist on a CUDA-13 install). Strict
# superset of alpha.4 — Linux + single-CUDA hosts unchanged.
baracuda-types         = { version = "0.0.1-alpha.60", features = ["half-crate", "f8-crate"] }
baracuda-core          = { version = "0.0.1-alpha.60" }
baracuda-cuda-sys      = { version = "0.0.1-alpha.60" }
baracuda-driver        = { version = "0.0.1-alpha.60" }
baracuda-runtime       = { version = "0.0.1-alpha.60" }
baracuda-cublas-sys    = { version = "0.0.1-alpha.60" }
baracuda-cublas        = { version = "0.0.1-alpha.60" }
baracuda-cudnn-sys     = { version = "0.0.1-alpha.60" }
baracuda-cudnn         = { version = "0.0.1-alpha.60", features = ["half-crate"] }
baracuda-curand-sys    = { version = "0.0.1-alpha.60" }
baracuda-curand        = { version = "0.0.1-alpha.60" }
baracuda-nvrtc-sys     = { version = "0.0.1-alpha.60" }
baracuda-nvrtc         = { version = "0.0.1-alpha.60" }
baracuda-nccl-sys      = { version = "0.0.1-alpha.60" }
baracuda-nccl          = { version = "0.0.1-alpha.60", features = ["half-crate"] }
baracuda-cutlass       = { version = "0.0.1-alpha.60" }
# baracuda alpha.26 — new ML kernel facade. Fuel uses `baracuda-kernels-sys`
# (raw extern "C") rather than the safe `baracuda-kernels` Plan-based wrapper
# so each kernel becomes its own KernelRef in Fuel's binding table — the
# safe layer's Plan-cached dispatch isn't compatible with Fuel's
# per-decision-point alternatives composition.
baracuda-kernels-types = { version = "0.0.1-alpha.60" }
baracuda-kernels-sys   = { version = "0.0.1-alpha.60", features = [
    "cudnn",
    "sm89",
    # Phase 48 (Consolidation B) 4-bit weight-only GEMM families.
    "awq",
    "marlin",
    # Phase 53 bitsandbytes NF4 (NormalFloat 4-bit) dequant + GEMV.
    "bnb_nf4",
    # Phase 51 additive-mask SDPA + Phase 54 block-sparse + 2:4 sparsity
    # + Phase 56 ring attention all share the elementwise / attention
    # families that Fuel routes through baracuda — opt them in so the
    # primitives are linkable even if Op-surface wiring lands later.
    "xformers_blocksparse",
    "xformers_sparse24",
    "ring_attention",
    # Phase 47 fused linear cross-entropy (loss_flce_*) is NOT cargo-
    # gated; the symbols are always built. Same for sdpa_arbmask.
    # Phase 50 Mamba SSM (causal_conv1d + selective_scan + ssd_chunk_scan).
    "mamba",
    # Phase 46 FlashInfer (paged KV append/decode + sampling +
    # cascade LSE merge) — Fuel's inference path uses this.
    "flashinfer",
    # Phase 43 HyperConnection (mhc_layer_static) is exotic; left off
    # by default. Add "mhc" when a Fuel layer needs it.
    # Phase 42 + 59a + 59b + 60 FA2 — alpha.60 vendor closes the full
    # 9 head_dim set {32,64,96,128,160,192,224,256,512} for FW (BW
    # only covers the original 6 per VENDOR.md). Fuel-side flash_attn
    # launcher migrated off the upstream vendored FA2 onto baracuda's
    # `fa2_sdpa_*_run_v2` symbols. SD 1.5 hd40/hd80 paths still use
    # Fuel's standard-attention fallback (no FA2 path).
    "fa2",
] }
fancy-regex = "0.17.0"
gemm = { version = "0.19.0", features = ["wasm-simd128-enable"] }
hf-hub = "0.5.0"
half = { version = "2.5.0", features = [
    "num-traits",
    "use-intrinsics",
    "rand_distr",
    "bytemuck",
] }
float8 = { version = "0.7.0", features = ["num-traits", "rand_distr"] }
hound = "3.5.1"
image = { version = "0.25.2", default-features = false, features = [
    "jpeg",
    "png",
] }
imageproc = { version = "0.26.0", features = [
    "text",
], default-features = false }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
libc = { version = "0.2" }
libm = { version = "0.2.15" }
log = "0.4"
paste = "1.0"
bytemuck = "1.25"
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
tempfile = "3.27"
num_cpus = "1.15.0"
num-traits = "0.2.15"
once_cell = "1"
parquet = "58.1.0"
rand = "0.9"
rand_distr = "0.5"
rayon = "1.12"
safetensors = "0.7.0"
serde = { version = "1.0.171", features = ["derive"] }
smallvec = { version = "1", features = ["const_new"] }
serde_plain = "1.0.2"
serde_json = "1.0.99"
thiserror = "2"
tokenizers = { version = "0.22.0", default-features = false }
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.23"
ug = "0.5.0"
ug-cuda = "0.5.0"
ug-metal = "0.5.0"
yoke = { version = "0.8", features = ["derive"] }
zip = { version = "8.5.0", default-features = false }
objc2 = { version = "0.6" }
objc2-metal = { version = "0.3.1" }
objc2-foundation = { version = "0.3.1" }
cudaforge = "0.1"
prost = "0.13"
prost-build = "0.13"
rstest = "0.23"
tokio = "1"

[profile.release-with-debug]
inherits = "release"
debug = true
