[workspace]
# Every Fuel crate lives in the workspace so each one can inherit
# shared dep versions via `{ workspace = true }`. Crates that need
# heavy build toolchains (CUDA, Metal, Python, prost/ONNX) are kept
# off `default-members` so a plain `cargo build` / `cargo test`
# still works on machines that don't have those toolchains.
members = [
    "fuel-aocl-cpu-backend",
    "fuel-book",
    "fuel-conv",
    "fuel-core",
    "fuel-ir",
    "fuel-backend-contract",
    "fuel-cpu-kernels",
    "fuel-hardware",
    "fuel-cpu-backend",
    "fuel-mkl-cpu-backend",
    "fuel-cublaslt",
    "fuel-cuda-vmm",
    "fuel-datasets",
    "fuel-examples",
    "fuel-formats",
    "fuel-graph",
    "fuel-kernel-seam-announce",
    "fuel-kernel-seam-types",
    "fuel-kernel-seam",
    "fuel-cuda-backend",
    "fuel-dispatch",
    "fuel-vulkan-backend",
    "fuel-inference",
    "fuel-kernels-source",
    "fuel-vulkan-kernels",
    "fuel-lazy-examples",
    "fuel-metal-backend",
    "fuel-metal-kernels",
    "fuel-correctness-fixtures",
    "fuel-kiss-ref-backend",
    "fuel-onnx",
    "fuel-parallel",
    "fuel-pyo3",
    "fuel-quantized",
    "fuel-memory",
    "fuel-training",
    "fuel-transformers",
    "fuel-ug",
    "fuel-wasm-examples/*",
    "fuel-wasm-tests",
    "fuel-tensor-tools",
]
# What `cargo build`, `cargo check`, `cargo test` without `-p` or
# `--workspace` will actually build. Matches the pre-restructure
# `members` list — CUDA/Metal/ONNX/book crates require toolchains
# or platforms not every contributor has, so they're opt-in via
# `-p` or `--workspace`.
default-members = [
    "fuel-core",
    "fuel-ir",
    "fuel-backend-contract",
    "fuel-cpu-kernels",
    "fuel-hardware",
    "fuel-cpu-backend",
    "fuel-dispatch",
    "fuel-formats",
    "fuel-graph",
    "fuel-kernel-seam-announce",
    "fuel-kernel-seam-types",
    "fuel-cuda-backend",
    "fuel-vulkan-backend",
    "fuel-kernels-source",
    "fuel-vulkan-kernels",
    "fuel-lazy-examples",
    "fuel-memory",
    "fuel-metal-backend",
    "fuel-datasets",
    "fuel-examples",
    "fuel-inference",
    "fuel-parallel",
    "fuel-pyo3",
    "fuel-quantized",
    "fuel-transformers",
    "fuel-training",
    "fuel-ug",
    "fuel-wasm-examples/*",
    "fuel-wasm-tests",
]
resolver = "2"

[workspace.package]
version = "0.10.3"
edition = "2024"
description = "Minimalist ML framework."
repository = "https://github.com/ciresnave/fuel"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ab_glyph = "0.2.23"
accelerate-src = { version = "0.3.2" }
# AOCL: AMD CPU BLAS wrappers (github.com/ciresnave/aocl), published on
# crates.io. Switched from the out-of-tree path dep to crates.io 2026-06-13
# so a clean clone builds without the sibling checkout. Fuel's surface is
# tiny and stable across 0.1.x (aocl_blas::gemm + aocl_types::Trans::No).
# NOTE: building fuel-aocl-cpu-backend still needs a libclang for bindgen +
# AMD's AOCL install for the prebuilt BLIS lib — those are runtime/build
# prerequisites, independent of where the Rust wrapper crate comes from.
aocl-blas  = "0.1"
aocl-types = "0.1"
# Intel oneMKL safe wrapper for the Phase 7b second CPU backend.
# Crates.io release 0.2.0 (2026-05-15) — adds service module
# (IsaLevel, cpu_* helpers, ThreadCountGuard, AlignedBuffer), RNG
# distribution suite, iterative-refinement LAPACK, sparse SYRK/SYPR,
# summary-stats preprocessing.
onemkl = "0.2"
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
fuel = { path = "./fuel-core", package = "fuel-core", version = "0.10.3" }
fuel-aocl-cpu-backend = { path = "./fuel-aocl-cpu-backend", version = "0.10.3" }
fuel-conv = { path = "./fuel-conv", version = "0.10.3" }
fuel-ir = { path = "./fuel-ir", version = "0.10.3" }
fuel-backend-contract = { path = "./fuel-backend-contract", version = "0.10.3" }
fuel-cpu-kernels = { path = "./fuel-cpu-kernels", version = "0.10.3" }
fuel-hardware = { path = "./fuel-hardware", version = "0.10.3" }
fuel-correctness-fixtures = { path = "./fuel-correctness-fixtures", version = "0.10.3" }
fuel-cpu-backend = { path = "./fuel-cpu-backend", version = "0.10.3" }
fuel-mkl-cpu-backend = { path = "./fuel-mkl-cpu-backend", version = "0.10.3" }
fuel-graph = { path = "./fuel-graph", version = "0.10.3" }
fuel-kernel-seam-announce = { path = "./fuel-kernel-seam-announce", version = "0.10.3" }
fuel-kernel-seam-types = { path = "./fuel-kernel-seam-types", version = "0.10.3" }
fuel-kernel-seam = { path = "./fuel-kernel-seam", version = "0.10.3" }
fuel-cuda-backend = { path = "./fuel-cuda-backend", version = "0.10.3" }
fuel-dispatch = { path = "./fuel-dispatch", version = "0.10.3" }
fuel-vulkan-backend = { path = "./fuel-vulkan-backend", version = "0.10.3" }
fuel-kernels-source = { path = "./fuel-kernels-source", version = "0.10.3" }
fuel-vulkan-kernels = { path = "./fuel-vulkan-kernels", version = "0.10.3" }
fuel-datasets = { path = "./fuel-datasets", version = "0.10.3" }
fuel-formats = { path = "./fuel-formats", version = "0.10.3" }
fuel-inference = { path = "./fuel-inference", version = "0.10.3" }
fuel-metal-backend = { path = "./fuel-metal-backend", version = "0.10.3" }
fuel-metal-kernels = { path = "./fuel-metal-kernels", version = "0.10.3" }
fuel-onnx = { path = "./fuel-onnx", version = "0.10.3" }
fuel-parallel = { path = "./fuel-parallel", version = "0.10.3" }
fuel-quantized = { path = "./fuel-quantized", version = "0.10.3" }
fuel-memory = { path = "./fuel-memory", version = "0.10.3" }
fuel-training = { path = "./fuel-training", version = "0.10.3" }
fuel-transformers = { path = "./fuel-transformers", version = "0.10.3" }
fuel-ug = { path = "./fuel-ug", version = "0.10.3" }
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.8", default-features = false }
# --- CUDA FFI layer: baracuda -----------------------------------------------
# Fuel depends on baracuda's sub-crates directly (not the `baracuda` umbrella)
# so feature flags stay explicit and transitive weight is minimal per consuming
# crate. All 46 baracuda crates are published on crates.io.
#
# alpha.4 added the `half-crate` feature on baracuda-cudnn (CudnnDataType
# impls for half::f16 / half::bf16), unblocking the f16/bf16 conv2d/conv1d
# paths in fuel-cuda-backend.
#
# alpha.5 fixes multi-CUDA cuDNN search-dir selection on Windows: with both
# CUDA 12.x and 13.x cuDNN bundles installed under
# `C:\Program Files\NVIDIA\CUDNN\v9.x\bin\<cuda_major>\`, the loader now
# picks the bundle whose major matches the running CUDA driver instead of
# whatever the filesystem happened to enumerate first. That bug bit Fuel's
# yolov8 anchor (it loaded the 12.9 cudnn_adv64_9.dll which delay-references
# cublasLt64_12.dll, which doesn't exist on a CUDA-13 install). Strict
# superset of alpha.4 — Linux + single-CUDA hosts unchanged.
#
# alpha.66 lands the `cuMemGetInfo` wrappers Fuel asked for so the CUDA
# backend can report device memory pressure back to the runtime selector:
# `baracuda_driver::mem_get_info() -> (free, total)` and the per-`Device`
# `vram_info` / `vram_free` / `vram_total` accessors. This unblocks step 2
# of the backend-contract v0.3 migration (`BackendRuntime for CudaDevice`,
# see docs/architecture/05-backend-contract.md §Current compliance).
#
# alpha.67 (Phase 74) answers docs/baracuda-ask-fp-gemm-reduce-to-2026-06-10.md:
# dense FP GEMM (`gemm_dense_{f32,f64,f16,bf16}_run`, cuBLAS-backed,
# RRR/RCR/CRR + flexible lds + strided batch) — retires Fuel's
# `matmul_via_cublas` residue. The reply also surfaced that
# `reduce_{sum,max}_to_*` has shipped at full 4-dtype coverage since
# alpha.46 (sys-only, invisible to the facade audit) — Fuel's f32-only
# reduce-to wrappers generalize against those.
#
# alpha.68 (2026-06-15) fixes the CUTLASS-kernel build under recent MSVC +
# CUDA 13.x: baracuda-cutlass-kernels-sys now passes `/Zc:preprocessor` to
# nvcc's host compiler so CUDA 13.3's CCCL headers stop hard-erroring on
# cl.exe's traditional preprocessor (the wall that blocked the A3b-1 live
# smoke). No Fuel-facing API change vs alpha.67.
#
# alpha.70 (2026-06-28) — Step E Phase B2 device-load telemetry: adds
# `Stream::is_complete()`/`is_idle()` (cuStreamQuery) + `baracuda-nvml`
# `Device::utilization()`/`gpu_utilization_percent()` (NVML, separate crate, not
# yet a Fuel dep — B2 wires it later). No breaking change to the surfaces Fuel
# consumes today; bumped for currency + to unblock B2.
#
# alpha.72 (2026-06-29) — Step E Phase A3 (CUDA async dispatch): `DeviceBuffer`
# allocated via `new_async` now frees STREAM-ORDERED on `Drop` (cuMemFreeAsync on
# the retained origin stream), and NEW `zeros_async(ctx,len,stream)` gives output
# buffers async alloc+zero+free. Sync constructors (new/zeros/from_slice) stay
# fully synchronous (no behavior change). Lets A3 drop the per-op
# `device.synchronize()` and pipeline on the per-device stream with no Fuel-side
# retention pool or executor lifetime guards. Use alpha.72 (alpha.71 had a Drop
# fallback hazard, fixed here). Answers docs/outreach/baracuda-stream-ordered-alloc-ask.md.
#
# KERNEL-SEAM STATUS (carried from the FKC branch, re-verified against the surface
# up to alpha.72): the published baracuda-* FFI surface (baracuda-kernels-sys + all
# baracuda-* crates) exposes NO `baracuda_seam_hello`, NO DLPack/DLTensor
# consumption, and NO JIT-on-request / runtime-fused-op-registration endpoint —
# i.e. the ratified Kernel-Seam (Profile v1) is NOT yet exposed by Baracuda.
# alpha.69+ ships the building blocks (baracuda-nvrtc runtime PTX compile,
# baracuda-forge build-time nvcc), but the seam surface (seam_hello + a
# DLPack-consuming kernel + the §5 JIT endpoint) must land in a later Baracuda
# version before the cross-FFI seam can be tested. Tracked in docs/specs/kernel-seam-interop.md §7.1.
#
# alpha.76 (2026-07-08) — bespoke NaN-PROPAGATING `relu` family in
# baracuda-kernels-sys: `baracuda_kernels_unary_relu_propagating_{f32,f64,f16,bf16}[_strided]_run`
# + matching `_can_implement` gates, same ABI/feature-gate (sm80/sm89/sm90a) as
# the incumbent NaN-scrubbing `unary_relu_*` family (which stays, for other
# consumers). Additive-only vs alpha.75 (verified via crates.io src diff —
# no signature changes elsewhere, only rustfmt reflow). Fuel rebinds
# `OpKind::ReluElementwise`'s CUDA path to the propagating family here,
# closing the CPU/CUDA NaN-convention divergence opened by 772e27a0.
#
# alpha.77 (2026-07-09) — the `_doff` device-resident-offset WriteSlice family
# in baracuda-kernels-sys: `baracuda_kernels_write_slice_b{1,2,4,8}_doff_run`
# (+ `_can_implement`), = the base `_run` plus `dyn_axis: i32` + `dyn_start_dev:
# *const i64` inserted right after `range_start`; the kernel reads
# `dyn_start_dev[0]` at entry as the dynamic axis's start, so the offset stays
# DEVICE-RESIDENT and survives CUDA-graph capture/replay (the CapturedRun decode
# lever). Additive-only vs alpha.76 (verified: 0 FFI symbols removed, 12 added;
# 173/173 live CUDA parity). The whole workspace moved to alpha.77 in lockstep
# (also carries kernelgen breadth: base_offset/where-select/hetero-dropout/
# argsort/topk/im2col — all off-key, no STRUCTURE_KEY_VERSION bump).
baracuda-types         = { version = "0.0.1-alpha.77", features = ["half-crate", "f8-crate"] }
baracuda-core          = { version = "0.0.1-alpha.77" }
baracuda-cuda-sys      = { version = "0.0.1-alpha.77" }
baracuda-driver        = { version = "0.0.1-alpha.77" }
baracuda-runtime       = { version = "0.0.1-alpha.77" }
baracuda-cublas-sys    = { version = "0.0.1-alpha.77" }
baracuda-cublas        = { version = "0.0.1-alpha.77" }
baracuda-cudnn-sys     = { version = "0.0.1-alpha.77" }
baracuda-cudnn         = { version = "0.0.1-alpha.77", features = ["half-crate"] }
baracuda-curand-sys    = { version = "0.0.1-alpha.77" }
baracuda-curand        = { version = "0.0.1-alpha.77" }
baracuda-nvrtc-sys     = { version = "0.0.1-alpha.77" }
baracuda-nvrtc         = { version = "0.0.1-alpha.77" }
# The live JIT synthesizer (BaracudaSynthesizer, the fuel-kernel-seam Synthesizer
# impl). EXACT pin: only the `seam` module surface is supported/stable — the
# generator internals are alpha-fluid, so never AUTO-upgrade. Deliberately bumped
# to alpha.77 in LOCKSTEP with the rest of the baracuda workspace (2026-07-09):
# baracuda-kernels-sys is a shared extern-C dep, so leaving kernelgen at alpha.76
# while the rest is alpha.77 would pull two kernels-sys versions and duplicate the
# FFI symbols. Pulled only under fuel-dispatch's `jit-synth` feature.
baracuda-kernelgen     = { version = "=0.0.1-alpha.77" }
baracuda-nccl-sys      = { version = "0.0.1-alpha.77" }
baracuda-nccl          = { version = "0.0.1-alpha.77", features = ["half-crate"] }
baracuda-cutlass       = { version = "0.0.1-alpha.77" }
# baracuda alpha.26 — new ML kernel facade. Fuel uses `baracuda-kernels-sys`
# (raw extern "C") rather than the safe `baracuda-kernels` Plan-based wrapper
# so each kernel becomes its own KernelRef in Fuel's binding table — the
# safe layer's Plan-cached dispatch isn't compatible with Fuel's
# per-decision-point alternatives composition.
baracuda-kernels-types = { version = "0.0.1-alpha.77" }
baracuda-kernels-sys   = { version = "0.0.1-alpha.77", features = [
    "cudnn",
    "sm89",
    # Phase 48 (Consolidation B) 4-bit weight-only GEMM families.
    "awq",
    "marlin",
    # Phase 53 bitsandbytes NF4 (NormalFloat 4-bit) dequant + GEMV.
    "bnb_nf4",
    # Phase 51 additive-mask SDPA + Phase 54 block-sparse + 2:4 sparsity
    # + Phase 56 ring attention all share the elementwise / attention
    # families that Fuel routes through baracuda — opt them in so the
    # primitives are linkable even if Op-surface wiring lands later.
    "xformers_blocksparse",
    "xformers_sparse24",
    "ring_attention",
    # Phase 47 fused linear cross-entropy (loss_flce_*) is NOT cargo-
    # gated; the symbols are always built. Same for sdpa_arbmask.
    # Phase 50 Mamba SSM (causal_conv1d + selective_scan + ssd_chunk_scan).
    "mamba",
    # Phase 46 FlashInfer (paged KV append/decode + sampling +
    # cascade LSE merge) — Fuel's inference path uses this.
    "flashinfer",
    # Phase 43 HyperConnection (mhc_layer_static) is exotic; left off
    # by default. Add "mhc" when a Fuel layer needs it.
    # Phase 42 + 59a + 59b + 60 FA2 — alpha.60 vendor closes the full
    # 9 head_dim set {32,64,96,128,160,192,224,256,512} for FW (BW
    # only covers the original 6 per VENDOR.md). Fuel-side flash_attn
    # launcher migrated off the upstream vendored FA2 onto baracuda's
    # `fa2_sdpa_*_run_v2` symbols. SD 1.5 hd40/hd80 paths still use
    # Fuel's standard-attention fallback (no FA2 path).
    "fa2",
] }
fancy-regex = "0.17.0"
gemm = { version = "0.19.0", features = ["wasm-simd128-enable"] }
hf-hub = "0.5.0"
half = { version = "2.5.0", features = [
    "num-traits",
    "use-intrinsics",
    "rand_distr",
    "bytemuck",
] }
float8 = { version = "0.7.0", features = ["num-traits", "rand_distr"] }
hound = "3.5.1"
image = { version = "0.25.2", default-features = false, features = [
    "jpeg",
    "png",
] }
imageproc = { version = "0.26.0", features = [
    "text",
], default-features = false }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
libc = { version = "0.2" }
libm = { version = "0.2.15" }
log = "0.4"
paste = "1.0"
bytemuck = "1.25"
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
tempfile = "3.27"
num_cpus = "1.15.0"
num-traits = "0.2.15"
once_cell = "1"
parquet = "58.1.0"
rand = "0.9"
rand_distr = "0.5"
rayon = "1.12"
safetensors = "0.7.0"
serde = { version = "1.0.171", features = ["derive"] }
smallvec = { version = "1", features = ["const_new"] }
serde_plain = "1.0.2"
serde_json = "1.0.99"
# serde_yaml fork (maintained) for the FKC kernel-contract importer's
# fenced ```fkc YAML blocks. Always compiled by fuel-dispatch (FKC is
# unconditional core infrastructure — no feature gate).
# 0.0.12 is the last self-contained release (0.0.13 is a deprecation shim
# forwarding to noyalib). FKC enforces a restricted §3.8 subset in a pre-pass
# before handing the chunk to this deserializer.
serde_yml = "0.0.12"
thiserror = "2"
tokenizers = { version = "0.23.1", default-features = false }
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.23"
ug = "0.5.0"
ug-cuda = "0.5.0"
ug-metal = "0.5.0"
yoke = { version = "0.8", features = ["derive"] }
zip = { version = "8.5.0", default-features = false }
objc2 = { version = "0.6" }
objc2-metal = { version = "0.3.1" }
objc2-foundation = { version = "0.3.1" }
prost = "0.13"
prost-build = "0.13"
rstest = "0.23"
tokio = "1"

[profile.release-with-debug]
inherits = "release"
debug = true

# Unify the kernel-seam crates across the seam boundary. `baracuda-kernelgen`
# (crates.io, under fuel-dispatch's `jit-synth` feature) depends on the PUBLISHED
# fuel-kernel-seam / -types 0.10.3, while the workspace uses its own path members
# of the same crates — cargo treats path and registry as different sources, so
# without this patch there would be two incompatible copies and `BaracudaSynthesizer`
# would impl a `Synthesizer` trait distinct from the one fuel-dispatch calls. The
# members ARE the source that produced the published 0.10.3 (the envelope is frozen),
# so redirecting the registry deps to them is the correct unification. Inert unless
# `jit-synth` pulls kernelgen (no other crate depends on the registry seam crates).
[patch.crates-io]
fuel-kernel-seam = { path = "./fuel-kernel-seam" }
fuel-kernel-seam-types = { path = "./fuel-kernel-seam-types" }
