[package]
name = "fuel-nn"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
fuel = { workspace = true }
fuel-cpu-backend = { workspace = true }
fuel-cuda-backend = { workspace = true, optional = true }
fuel-ir = { workspace = true, optional = true }
baracuda-types = { workspace = true, optional = true }
baracuda-driver = { workspace = true, optional = true }
baracuda-kernels-sys = { workspace = true, optional = true }
half = { workspace = true }
thiserror = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
objc2-metal = { workspace = true, optional = true }
fuel-metal-kernels = { workspace = true, optional = true }
libc = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
criterion = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "fuel/accelerate"]
cuda = ["fuel/cuda", "dep:fuel-cuda-backend", "dep:fuel-ir", "dep:baracuda-types", "dep:baracuda-driver", "dep:baracuda-kernels-sys"]
cudnn = ["fuel/cudnn"]
mkl = ["dep:intel-mkl-src", "fuel/mkl"]
metal = ["fuel/metal", "dep:fuel-metal-kernels", "dep:objc2-metal"]

[[bench]]
name = "bench_main"
harness = false
